--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="bg-gradient-to-b from-gray-900 to-gray-600 bg-gradient-to-t w-screen h-screen">
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+  <body
+    class="bg-gradient-to-b from-gray-900 to-gray-600 bg-gradient-to-t flex flex-col w-screen min-h-screen">
+    <div id="root">
+      <script type="module" src="/src/main.jsx"></script>
+    </div>
   </body>
 </html>
